build on https://git-wip-us.apache.org/repos/asf/ambari.git